2003-11-24  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (cm_xref): xstrdup the result from
	xml_get_assoc_for_id, as it gets freed later.

	* makeinfo/xml.c (xml_get_assoc_for_id, xml_associate_title_with_id):
	reimplemented unnumbered_labels handling.
	(xml_insert_docbook_image): Docbook expects format attribute values to
	be uppercase.

2003-11-23  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\defttsl): new font.
	(\df): set ttsl too.
	(\deffngeneral,\deftypefngeneral,\deftypecvgeneral,
	 \deftypheader): call \ampdefunargs or \normaldefunargs.
	(\normaldefunargs): new macro, typesetting defun
	 args in ttsl (instead of sl).
	(\ampdefunargs): treat & specially and then call \normaldefunargs.
	(\defname): typeset defun name in tt (instead of bf).

	* doc/texinfo.tex: uniformly comment out eol with {% at macro
	starts.

2003-11-23  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.c (is_in_insertion_of_type): return the level
	where the insertion is found.

	* makeinfo/makeinfo.c (search_forward_until_pos): new function that
	sets search_forward boundary.
	(text_expansion): also reset docbook.

	* makeinfo/sectioning.h:
	* makeinfo/sectioning.c (current_chapter_number): new function that
	returns top level chapter numbers.
	(handle_enum_increment): always do the incrementation. but return
	strings conditionally.

	* makeinfo/xml.c: changed screen element's contained_in_para to 0 for
	Docbook. @lisp/@smalllisp create programlisting.
	(xml_insert_quotation): reimplemented quotation_stack handling.

2003-11-22  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\tocentry): same as \entry, no second 1pt of
	stretch.  And a couple doc fixes.

	* doc/texinfo.txi (Conventions): finally, get rid of @vskip
	-@baselineskip kludge, we handle index entries after @item's now.

2003-11-22  Stepan Kasal  <kasal@ucw.cz>

	* doc/texinfo.txi: use new @quotation feature.

	* texinfo.tex (\putwordDeftypevar, \putwordDeftypefun): Remove.